Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-7323] SPM can't handle spaces in path to Xcode #787

Closed
davedelong opened this issue Mar 31, 2018 · 2 comments
Closed

[SR-7323] SPM can't handle spaces in path to Xcode #787

davedelong opened this issue Mar 31, 2018 · 2 comments

Comments

@davedelong
Copy link

Previous ID SR-7323
Radar rdar://problem/39076084
Original Reporter @davedelong
Type Bug
Status Resolved
Resolution Done
Environment

macOS 10.3.3

Xcode 9.3 GM

Apple Swift version 4.1 (swiftlang-902.0.48 clang-902.0.37.1)
Target: x86_64-apple-darwin17.4.0

Additional Detail from JIRA
Votes 1
Component/s llbuild
Labels Bug, StarterBug
Assignee None
Priority Medium

md5: fb6585d15b2a5d4b326b7701a40acbff

Issue Description:

My Xcode is located at `/Applications/Xcodes/Xcode 9.3 GM.app`, and `xcode-select` is pointing to it.

When I try to `swift build` things, SPM dies because it can't find `/Applications/Xcodes/Xcode`.

@ankitspd
Copy link
Member

@swift-ci create

@ankitspd
Copy link
Member

ankitspd commented Apr 1, 2018

#265

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 5, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Projects
None yet
Development

No branches or pull requests

2 participants